# mimosa-gui

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
core/: defines.h  display.cc  display.h  type.h
core/base/: help_defines.h  log.cc  log.h  string_helper.cc  string_helper.h
core/platform/windows/: display_windows.cc  display_windows.h
main/: main.cc
